# Clovy

./: .gitignore  Cargo.toml  readme.md
src/: main.rs
src/core/: lists.rs  mod.rs  reader.rs  serializing.rs  string.rs  writer.rs
src/core/chunks/: acrv.rs  agrp.rs  bgnd.rs  dummy.rs  extn.rs  feds.rs  font.rs  gen8.rs  glob.rs  lang.rs  mod.rs  objt.rs  optn.rs  path.rs  scpt.rs  seqn.rs  shdr.rs  sond.rs  sprt.rs  tmln.rs
src/core/models/: animation_curve.rs  audio_group.rs  background.rs  dummy.rs  extension.rs  filter_effect.rs  font.rs  language.rs  mod.rs  object.rs  option.rs  path.rs  script.rs  sequence.rs  shader.rs  sound.rs  sprite.rs  timeline.rs
